PCF NodeJS to Kubernetes/nodejs-prj/deploy/cicd/tekton/nodejs-prj-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  creationTimestamp: null
  labels:
    move2kube.konveyor.io/service: nodejs-prj
  name: nodejs-prj
spec:
  rules:
    - host: nodejs-prj.com
      http:
        paths:
          - backend:
              service:
                name: el-nodejs-prj-git-repo
                port:
                  name: port-8080
            path: /el-nodejs-prj-git-repo
            pathType: Prefix
status:
  loadBalancer: {}
